feat: header 添加工具栏

--- a/src/layout/loading/index.module.scss
+++ b/src/layout/loading/index.module.scss
@@ -4,4 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
