--- a/src/layout/index/index.module.scss
+++ b/src/layout/index/index.module.scss
@@ -1,3 +1,6 @@
+.layout-wrap {
+  position: relative;
+}
 .page-loading-wrap {
   width: 100%;
   height: 100vh;
@@ -5,4 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
